@@ -1,8 +1,8 @@
 
-R Under development (unstable) (2011-08-16 r56745)
+R Under development (unstable) (2011-09-04 r56935)
 Copyright (C) 2011 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
-Platform: x86_64-unknown-linux-gnu (64-bit)
+Platform: x86_64-apple-darwin9.8.0/x86_64 (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -675,7 +675,7 @@ temperature no yes
 > for(tp in c("in", "dev", "ndc", "nfc", "npc", "nic"))
 +     print(grconvertX(c(1.0, 4.0), "user", tp))
 [1] 1.577778 3.022222
-[1] 282.5449 386.5449
+[1] 113.6 217.6
 [1] 0.2253968 0.4317460
 [1] 0.3134921 0.8293651
 [1] 0.03703704 0.96296296
@@ -1989,7 +1989,7 @@ N
 > points.default # to see how it calls "plot.xy(xy.coords(x, y), ...)"
 function (x, y = NULL, type = "p", ...) 
 plot.xy(xy.coords(x, y), type = type, ...)
-<bytecode: 0x34ef1f8>
+<bytecode: 0x1031baf78>
 <environment: namespace:graphics>
 > 
 > 
@@ -2896,7 +2896,7 @@ function (xy = 1, warn.log = TRUE)
     u <- par("usr")
     xy * c(u[2L] - u[1L], u[4L] - u[3L])/par("pin")
 }
-<bytecode: 0x42b5020>
+<bytecode: 0x10377cb90>
 <environment: namespace:graphics>
 > 
 > ## plot labels offset 0.12 inches to the right
@@ -2976,7 +2976,7 @@ function (xy = 1, warn.log = TRUE)
 > ### * <FOOTER>
 > ###
 > cat("Time elapsed: ", proc.time() - get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  4.86 0.03 5.062 0 0 
+Time elapsed:  12.04 0.987 13.322 0 0 
 > grDevices::dev.off()
 null device 
           1 
