@@ -3,6 +3,9 @@
 set.seed(1)
 if(.Platform$OS.type == "windows") options(pager = "console")
 
+pdf("reg-examples-2.pdf", encoding = "ISOLatin1.enc")
+
+
 ## stats
 example(SSasympOrig)
 example(SSlogis)
